spacing fixed #2

--- a/assets/css/includes/components/main.css
+++ b/assets/css/includes/components/main.css
@@ -1,6 +1,6 @@
 main {
   flex-grow: 4;
-  padding: 6.25rem 5.9375rem;
+  padding: 6.25rem 0rem; /* 5.9375rem*/
   display: flex;
   justify-content: center;
   align-items: space-between;
@@ -12,7 +12,7 @@ main {
   flex-direction: row;
   flex-wrap: wrap;
   align-items: center; 
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 .first-column {
@@ -64,7 +64,7 @@ main {
   flex-wrap: wrap;
   width: 90%;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 .person {
